--- a/Logotech-SPA/src/app/nav/nav.component.html
+++ b/Logotech-SPA/src/app/nav/nav.component.html
@@ -1,39 +1,39 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Logotech</a>
+<nav class="navbar navbar-expand-md navbar-dark bg-primary">
+  <div class="container">
+      <a class="navbar-brand" href="#">Logotech</a>
 
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Logopède</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Patient</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Agenda</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" (click)="logout()">Déconnection</a>
-      </li>
-  </ul>
-
-  <div *ngIf="loggedIn()" class="dropdown">
-    <a class="dropdown-toggle text-light">
-      Bienvenu Utilisateur
-    </a>
-  
-    <div class="dropdown-menu">
-      <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Edition du profil</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#"><i class="fa fa-sign-out"></i>Déconnection</a>
-    </div>
+      <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Logopède</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Patient</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Agenda</a>
+        </li>
+      </ul>
+    
+      <div *ngIf="loggedIn()" class="dropdown" dropdown>
+        <a class="dropdown-toggle text-light" dropdownToggle>
+          Bienvenu {{authService.decodedToken?.unique_name | titlecase}}
+        </a>
+      
+        <div class="dropdown-menu mt-3" *dropdownMenu>
+          <a class="dropdown-item" href="#"><i class="fa fa-user">
+          </i> Edition du profil</a>
+            <div class="dropdown-divider"></div>
+          <a class="dropdown-item" (click)="logout()">
+            <i class="fa fa-sign-out"></i>Déconnection</a>
+        </div>
+      </div>
+    
+      <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+        <input class="form-control mr-sm-2" type="text" name="username"
+          placeholder="Nom d'utilisateur" required [(ngModel)]="model.username">
+        <input class="form-control mr-sm-2" type="password" name="password"
+          placeholder="Mot de passe" required [(ngModel)]="model.password">
+        <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+      </form>
   </div>
-
-  <form *ngIf="!loggedIn()" #loginForm="ngForm" class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
-    <input class="form-control mr-sm-2" type="text" name="username"
-      placeholder="Nom d'utilisateur" required [(ngModel)]="model.username">
-    <input class="form-control mr-sm-2" type="password" name="password"
-      placeholder="Mot de passe" required [(ngModel)]="model.password">
-    <button [disabled]="!loginForm.valid" class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
-  </form>
-  
 </nav>
