--- a/Logotech-SPA/src/app/nav/nav.component.html
+++ b/Logotech-SPA/src/app/nav/nav.component.html
@@ -4,7 +4,7 @@
 
       <ul *ngIf="loggedIn()" class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" [routerLink]="['/liste-logopedes']" >Logopède</a>
+          <a class="nav-link" [routerLink]="['/liste-praticiens']" >Praticien</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" [routerLink]="['/liste-patients']" >Patient</a>
