--- a/Logotech-SPA/src/styles.css
+++ b/Logotech-SPA/src/styles.css
@@ -4,3 +4,52 @@
 @import '../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+
+/* CSS tabset patient */
+
+.tab-panel {
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 4px;
+  }
+  
+  .nav-tabs > li.open, .patient-tabset > .nav-tabs > li:hover {
+    border-bottom: 4px solid #fbcdcf;
+  }
+  
+  .patient-tabset > .nav-tabs > li.open > a, .patient-tabset > .nav-tabs > li:hover > a {
+    border: 0;
+    background: none !important;
+    color: #333333;
+  }
+  
+  .patient-tabset > .nav-tabs > li.open > a > i, .patient-tabset > .nav-tabs > li:hover > a > i {
+    color: #a6a6a6;
+  }
+  
+  .patient-tabset > .nav-tabs > li.open .dropdown-menu, .patient-tabset > .nav-tabs > li:hover .dropdown-menu {
+    margin-top: 0px;
+  }
+  
+  .patient-tabset > .nav-tabs > li.active {
+    border-bottom: 4px solid rgb(27, 122, 185);
+    position: relative;
+  }
+  
+  .patient-tabset > .nav-tabs > li.active > a {
+    border: 0 !important;
+    color: #333333;
+  }
+  
+  .patient-tabset > .nav-tabs > li.active > a > i {
+    color: #404040;
+  }
+  
+  .patient-tabset > .tab-content {
+    margin-top: -3px;
+    background-color: #fff;
+    border: 0;
+    border-top: 1px solid #eee;
+    padding: 15px 0;
+  }
+  
