--- a/Logotech-SPA/src/app/patients/patient-detail/patient-detail.component.html
+++ b/Logotech-SPA/src/app/patients/patient-detail/patient-detail.component.html
@@ -20,7 +20,7 @@
           </div>
           <div>
             <strong>Latéralité:</strong>
-            <p>{{ patient.lateralite.nom }}</p>
+            <p>{{ patient.lateralite }}</p>
           </div>
           <div>
             <strong>Personne de contact:</strong>
