--- a/Logotech-SPA/src/app/praticiens/praticien-card/praticien-card.component.html
+++ b/Logotech-SPA/src/app/praticiens/praticien-card/praticien-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-4">
   <div class="card-img-wrapper">
-    <img class="card-img-top" src="{{ praticien. }}" alt="{{ praticien.nom }}">
+    <img class="card-img-top"  alt="{{ praticien.nom }}">
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/liste-praticiens/', praticien.id]"><i class="fa fa-user"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary"><i class="fa fa-heart"></i></button></li>
