--- a/Logotech-SPA/src/app/patients/patient-edit/patient-edit.component.html
+++ b/Logotech-SPA/src/app/patients/patient-edit/patient-edit.component.html
@@ -101,9 +101,10 @@
       </tab>
       <tab heading="Changer de photo">
         <p>changement de photo</p>
+        <app-photo-editor [photos]="patient.photos"></app-photo-editor>
       </tab>
       </tabset>
-    </form>
+      </form>
     </div>
   </div>
 </div>
