--- a/Logotech-SPA/src/app/register/register.component.html
+++ b/Logotech-SPA/src/app/register/register.component.html
@@ -1,18 +1,44 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
   <h2 class="text-center text-primary">S'enregistrer</h2>
   <hr>
 
   <div class="form-group">
-    <input type="text" class="form-control" required name="username" [(ngModel)]="model.username" placeholder="Nom d'utilisateur">
+    <input type="text"
+    [ngClass]="{ 'is-invalid' : registerForm.get('username').errors && registerForm.get('username').touched }"
+    class="form-control is-invalid"
+    formControlName="username"
+    placeholder="Nom d'utilisateur">
+    <div class="invalid-feedback">Choisissez un nom d'utilisateur</div>
   </div>
 
   <div class="form-group">
-    <input type="password" class="form-control" required name="password" [(ngModel)]="model.password" placeholder="mot de passe">
+    <input type="password"
+    [ngClass]="{ 'is-invalid' : registerForm.get('password').errors && registerForm.get('password').touched }"
+    class="form-control"
+    formControlName="password"
+    placeholder="mot de passe">
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('required') && registerForm.get('password').touched ">Le mot de passe est requis</div>
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('minlength') && registerForm.get('password').touched ">Le mot de passe doit être de minimum 4 caractères</div>
+    <div class="invalid-feedback" *ngIf="registerForm.get('password').hasError('maxlength') && registerForm.get('password').touched ">Le mot de passe ne peut pas dépasser 8 caractères</div>
+  </div>
+
+  <div class="form-group">
+    <input type="password"
+    [ngClass]="{ 'is-invalid' : registerForm.get('confirmPassword').errors && registerForm.get('confirmPassword').touched ||
+    registerForm.get('confirmPassword').touched && registerForm.hasError('mismatch')}"
+    class="form-control"
+    formControlName="confirmPassword"
+    placeholder="confirmer le mot de passe">
+    <div class="invalid-feedback" *ngIf="registerForm.get('confirmPassword').hasError('required') && registerForm.get('confirmPassword').touched ">Le mot de passe est requis</div>
+    <div class="invalid-feedback" *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword').touched ">Les mots de passe doivent être identiques</div>
   </div>
 
   <div class="form-group text-center">
     <button class="btn btn-sucess" type="submit">Enregistrer</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Annuler</button>
-  </div> 
+  </div>
 
 </form>
+
+<p>Form value: {{ registerForm.value | json }}</p>
+<p>Form value: {{ registerForm.status | json }}</p>
