--- a/Logotech-SPA/src/app/patients/patient-card/patient-card.component.html
+++ b/Logotech-SPA/src/app/patients/patient-card/patient-card.component.html
@@ -4,7 +4,7 @@
     <ul class="list-inline member-icons animate text-center">
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/liste-patients/', patient.id]"><i class="fa fa-user"></i></button></li>
       <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/liste-patients/edit', patient.id]"><i class="fa fa-edit"></i></button></li>
-      <li class="list-inline-item"><button class="btn btn-primary" [routerLink]="['/liste-patients/delete', patient.id]"><i class="fa fa-trash"></i></button></li>
+      <li class="list-inline-item"><button class="btn btn-primary" (click)="deletePatient(patient.id)"><i class="fa fa-trash"></i></button></li>
     </ul>
   </div>
   <div class="card-body p-1">
